CHANGELOG

[0.5.0]
- You can create a binarySet without specifying the tonic (C by default)
- Rename asNotes and asIntervals to notes and intervals

[0.4.0]
- Rewrite. Clean API. Faster! Simpler code.

[0.3.0]
- binarySetNumber and fromBinary functions
- gamut.set now returns properly ordered notes
- add gamut.distances
- rename gamut.add to gamut.transpose
- Better test and code organization
- Merge gamut and gamut.parse

[0.2.0]
- Change API: you must decorate any function to return note names or intervals

[0.1.0]
- First implementation with odd api (gamut.notes, gamut.intervals)

BENCHMARKS

[0.4.0]
set: 65,223
transposition: 64,904 / 42,822

[0.3.0]
set: 56,141
transposition: 53,488 / 38,551

[0.2.0]
transposition: 59,455 / 41,513

[0.1.0]
transposition: 38,339 / 42,314

SIZES
[0.4.0] 21250 / 8334
[0.3.0] 21573 / 6690
[0.2.0] 21113 / 7356
[0.1.0] 11434 / 5301